--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             background: #e0e0e0;
         }
 
-        /* HEADER (Bilgi Paneli) */
+        /* HEADER */
         .header {
             position: fixed; 
             top: 20px; left: 20px;
@@ -88,13 +88,14 @@
         }
 
         /* RENK KODLARI */
-        .cat-tarih { background-color: #e74c3c; } /* Kırmızı */
-        .cat-park { background-color: #2ecc71; } /* Yeşil */
-        .cat-muze { background-color: #9b59b6; } /* Mor */
-        .cat-modern { background-color: #3498db; } /* Mavi */
-        .cat-meydan { background-color: #e67e22; } /* Turuncu */
-        .cat-ibb { background-color: #f1c40f; color: #000; } /* Sarı - İBB */
-        .cat-iskele { background-color: #7f8c8d; } /* Gri - Ulaşım */
+        .cat-tarih { background-color: #e74c3c; } 
+        .cat-park { background-color: #2ecc71; } 
+        .cat-muze { background-color: #9b59b6; } 
+        .cat-modern { background-color: #3498db; } 
+        .cat-meydan { background-color: #e67e22; } 
+        .cat-ibb { background-color: #f1c40f; color: #000; } 
+        .cat-iskele { background-color: #7f8c8d; } 
+        .cat-terminal { background-color: #2c3e50; } /* Siyah/Koyu - Otogarlar */
     </style>
 </head>
 <body>
@@ -113,7 +114,7 @@
     <script>
         var map = L.map('map', { 
             center: [41.035, 29.000], 
-            zoom: 11, // Zoom'u biraz açtık ki Beykoz/Pendik görünsün
+            zoom: 11, 
             zoomControl: false,
             tap: true 
         });
@@ -134,6 +135,7 @@
         var orangeIcon = new LeafIcon({iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-orange.png'});
         var goldIcon = new LeafIcon({iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-gold.png'});
         var greyIcon = new LeafIcon({iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-grey.png'});
+        var blackIcon = new LeafIcon({iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-black.png'}); // Yeni Otogar İkonu
 
         // KATMAN GRUPLARI
         var layerTarih = L.layerGroup();
@@ -143,30 +145,34 @@
         var layerModern = L.layerGroup();
         var layerIBB = L.layerGroup();
         var layerIskele = L.layerGroup();
+        var layerTerminal = L.layerGroup(); // Yeni Katman
 
-        // TAM LİSTE (GÜNCELLENMİŞ)
         var locations = [
-            // --- YENİ EKLENEN İSKELELER ---
-            { title: "Yenikapı İDO İskelesi", lat: 41.0020, lng: 28.9564, type: "cat-iskele", category: "İDO & Ulaşım", desc: "Bursa, Yalova ve Bandırma feribotlarının ana merkezi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Bostancı İskelesi", lat: 40.9524, lng: 29.0922, type: "cat-iskele", category: "İDO & Şehir Hatları", desc: "Adalar vapurunun ana durağı ve Bağdat Caddesi bağlantısı.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Pendik İDO İskelesi", lat: 40.8752, lng: 29.2361, type: "cat-iskele", category: "İDO & YHT", desc: "Yalova hızlı feribotu ve Yüksek Hızlı Tren bağlantı noktası.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Beykoz İskelesi", lat: 41.1347, lng: 29.0903, type: "cat-iskele", category: "Boğaz Hattı", desc: "Tarihi Beykoz dalyanları ve korularına açılan kapı.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Sarıyer İskelesi", lat: 41.1664, lng: 29.0556, type: "cat-iskele", category: "Boğaz Hattı", desc: "Börekçileriyle ünlü Sarıyer'in tarihi iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Kanlıca İskelesi", lat: 41.0987, lng: 29.0711, type: "cat-iskele", category: "Boğaz Hattı", desc: "Yoğurduyla meşhur tarihi boğaz iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Anadolu Kavağı İskelesi", lat: 41.1744, lng: 29.0894, type: "cat-iskele", category: "Turistik Rota", desc: "Boğaz turunun son durağı, Yoros Kalesi'nin eteği.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Rumeli Kavağı İskelesi", lat: 41.1817, lng: 29.0750, type: "cat-iskele", category: "Boğaz Hattı", desc: "Balıkçı restoranlarıyla ünlü boğazın en kuzey ucu.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Çengelköy İskelesi", lat: 41.0488, lng: 29.0550, type: "cat-iskele", category: "Boğaz Hattı", desc: "Tarihi Çınaraltı ve yalılar bölgesinin iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "İstinye İskelesi", lat: 41.1131, lng: 29.0556, type: "cat-iskele", category: "Boğaz Hattı", desc: "İstinye koyunun sakin iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Kabataş İskelesi", lat: 41.0340, lng: 28.9920, type: "cat-iskele", category: "Ana Hub", desc: "Adalar, Bursa ve Tramvay bağlantısının merkezi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
-            { title: "Kuzguncuk İskelesi", lat: 41.0370, lng: 29.0300, type: "cat-iskele", category: "Boğaz Hattı", desc: "Renkli evleri ve tarihi dokusuyla ünlü semtin iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" }, // Temsili
+            // --- OTOBÜS TERMİNALLERİ (YENİ - Siyah) ---
+            { title: "Esenler Otogarı (15 Temmuz)", lat: 41.0406, lng: 28.8927, type: "cat-terminal", category: "Otobüs Terminali", desc: "İstanbul'un ana otobüs terminali ve Metro bağlantısı.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Istanbul_Otogari.jpg/640px-Istanbul_Otogari.jpg" },
+            { title: "Harem Otogarı", lat: 41.0122, lng: 29.0108, type: "cat-terminal", category: "Otobüs Terminali", desc: "Anadolu yakasının tarihi otogarı ve arabalı vapur iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Harem_Otogar%C4%B1.jpg/640px-Harem_Otogar%C4%B1.jpg" },
+            { title: "Alibeyköy Cep Otogarı", lat: 41.0778, lng: 28.9461, type: "cat-terminal", category: "Otobüs Terminali", desc: "Kuzey hattı otobüsleri ve Tramvay (T5) bağlantısı.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Istanbul_Otogari.jpg/640px-Istanbul_Otogari.jpg" }, // Temsili
+            { title: "Dudullu Otogarı", lat: 40.9978, lng: 29.1633, type: "cat-terminal", category: "Otobüs Terminali", desc: "Anadolu yakasının modern ulaşım ve transfer merkezi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Harem_Otogar%C4%B1.jpg/640px-Harem_Otogar%C4%B1.jpg" }, // Temsili
 
-            // --- MEVCUT İSKELELER ---
-            { title: "Eminönü İskelesi", lat: 41.0150, lng: 28.9730, type: "cat-iskele", category: "Ulaşım", desc: "Boğaz ve Kadıköy vapurlarının ana merkezi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
-            { title: "Kadıköy İskelesi", lat: 40.9910, lng: 29.0220, type: "cat-iskele", category: "Ulaşım", desc: "Asya yakasının dünyaya açılan kapısı.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Haydarpasa_Terminal_Istanbul.jpg/640px-Haydarpasa_Terminal_Istanbul.jpg" },
-            { title: "Beşiktaş İskelesi", lat: 41.0415, lng: 29.0060, type: "cat-iskele", category: "Ulaşım", desc: "Üsküdar ve Kadıköy motorlarının kalbi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Besiktas_Pier_Istanbul.jpg/640px-Besiktas_Pier_Istanbul.jpg" },
-            { title: "Üsküdar İskelesi", lat: 41.0275, lng: 29.0150, type: "cat-iskele", category: "Ulaşım", desc: "Marmaray ve vapurların kesişim noktası.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Uskudar_Square_Fountain.jpg/640px-Uskudar_Square_Fountain.jpg" },
-            { title: "Karaköy İskelesi", lat: 41.0220, lng: 28.9750, type: "cat-iskele", category: "Ulaşım", desc: "Galata Kulesi'ne giden en kısa deniz yolu.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Galata_Tower_Istanbul.jpg/640px-Galata_Tower_Istanbul.jpg" },
+            // --- VAPUR İSKELELERİ ---
+            { title: "Eminönü Vapur İskelesi", lat: 41.0150, lng: 28.9730, type: "cat-iskele", category: "Ulaşım", desc: "Boğaz ve Kadıköy vapurlarının ana merkezi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Kadıköy Vapur İskelesi", lat: 40.9910, lng: 29.0220, type: "cat-iskele", category: "Ulaşım", desc: "Asya yakasının dünyaya açılan kapısı.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/Haydarpasa_Terminal_Istanbul.jpg/640px-Haydarpasa_Terminal_Istanbul.jpg" },
+            { title: "Beşiktaş Vapur İskelesi", lat: 41.0415, lng: 29.0060, type: "cat-iskele", category: "Ulaşım", desc: "Üsküdar ve Kadıköy motorlarının kalbi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Besiktas_Pier_Istanbul.jpg/640px-Besiktas_Pier_Istanbul.jpg" },
+            { title: "Üsküdar Vapur İskelesi", lat: 41.0275, lng: 29.0150, type: "cat-iskele", category: "Ulaşım", desc: "Marmaray ve vapurların kesişim noktası.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Uskudar_Square_Fountain.jpg/640px-Uskudar_Square_Fountain.jpg" },
+            { title: "Karaköy Vapur İskelesi", lat: 41.0220, lng: 28.9750, type: "cat-iskele", category: "Ulaşım", desc: "Galata Kulesi'ne giden en kısa deniz yolu.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Galata_Tower_Istanbul.jpg/640px-Galata_Tower_Istanbul.jpg" },
             { title: "Ortaköy İskelesi", lat: 41.0470, lng: 29.0275, type: "cat-iskele", category: "Turistik", desc: "Boğaz turlarının popüler kalkış noktası.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Ortak%C3%B6y_Square_and_Mosque.jpg/640px-Ortak%C3%B6y_Square_and_Mosque.jpg" },
+            { title: "Yenikapı İDO İskelesi", lat: 41.0020, lng: 28.9564, type: "cat-iskele", category: "İDO & Ulaşım", desc: "Bursa, Yalova ve Bandırma feribotlarının ana merkezi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Bostancı İskelesi", lat: 40.9524, lng: 29.0922, type: "cat-iskele", category: "İDO & Şehir Hatları", desc: "Adalar vapurunun ana durağı ve Bağdat Caddesi bağlantısı.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Pendik İDO İskelesi", lat: 40.8752, lng: 29.2361, type: "cat-iskele", category: "İDO & YHT", desc: "Yalova hızlı feribotu ve Yüksek Hızlı Tren bağlantı noktası.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Beykoz İskelesi", lat: 41.1347, lng: 29.0903, type: "cat-iskele", category: "Boğaz Hattı", desc: "Tarihi Beykoz dalyanları ve korularına açılan kapı.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Sarıyer İskelesi", lat: 41.1664, lng: 29.0556, type: "cat-iskele", category: "Boğaz Hattı", desc: "Börekçileriyle ünlü Sarıyer'in tarihi iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Kanlıca İskelesi", lat: 41.0987, lng: 29.0711, type: "cat-iskele", category: "Boğaz Hattı", desc: "Yoğurduyla meşhur tarihi boğaz iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Anadolu Kavağı İskelesi", lat: 41.1744, lng: 29.0894, type: "cat-iskele", category: "Turistik Rota", desc: "Boğaz turunun son durağı, Yoros Kalesi'nin eteği.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Rumeli Kavağı İskelesi", lat: 41.1817, lng: 29.0750, type: "cat-iskele", category: "Boğaz Hattı", desc: "Balıkçı restoranlarıyla ünlü boğazın en kuzey ucu.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Çengelköy İskelesi", lat: 41.0488, lng: 29.0550, type: "cat-iskele", category: "Boğaz Hattı", desc: "Tarihi Çınaraltı ve yalılar bölgesinin iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "İstinye İskelesi", lat: 41.1131, lng: 29.0556, type: "cat-iskele", category: "Boğaz Hattı", desc: "İstinye koyunun sakin iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Kabataş İskelesi", lat: 41.0340, lng: 28.9920, type: "cat-iskele", category: "Ana Hub", desc: "Adalar, Bursa ve Tramvay bağlantısının merkezi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
+            { title: "Kuzguncuk İskelesi", lat: 41.0370, lng: 29.0300, type: "cat-iskele", category: "Boğaz Hattı", desc: "Renkli evleri ve tarihi dokusuyla ünlü semtin iskelesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
 
             // --- İBB SOSYAL TESİSLERİ ---
             { title: "İBB Arnavutköy Sosyal Tesisi", lat: 41.0672, lng: 29.0432, type: "cat-ibb", category: "Ucuz Yemek & Manzara", desc: "Boğaz'ın içinde, ahşap mimarili uygun fiyatlı restoran.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Emirgan_Park_Yellow_Pavilion.jpg/640px-Emirgan_Park_Yellow_Pavilion.jpg" },
@@ -245,6 +251,7 @@
             { title: "Masumiyet Müzesi", lat: 41.0310, lng: 28.9796, type: "cat-muze", category: "Müze", desc: "Orhan Pamuk'un müzesi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Museum_of_Innocence_Istanbul.jpg/640px-Museum_of_Innocence_Istanbul.jpg" }
         ];
 
+        // İŞARETLEYİCİLERİ GRUPLARA DAĞIT
         locations.forEach(loc => {
             var selectedIcon;
             var targetLayer;
@@ -254,8 +261,9 @@
             else if (loc.type === 'cat-park') { selectedIcon = greenIcon; targetLayer = layerPark; }
             else if (loc.type === 'cat-meydan') { selectedIcon = orangeIcon; targetLayer = layerMeydan; }
             else if (loc.type === 'cat-muze') { selectedIcon = violetIcon; targetLayer = layerMuze; }
-            else if (loc.type === 'cat-ibb') { selectedIcon = goldIcon; targetLayer = layerIBB; } // Yeni
-            else if (loc.type === 'cat-iskele') { selectedIcon = greyIcon; targetLayer = layerIskele; } // Yeni
+            else if (loc.type === 'cat-ibb') { selectedIcon = goldIcon; targetLayer = layerIBB; } 
+            else if (loc.type === 'cat-iskele') { selectedIcon = greyIcon; targetLayer = layerIskele; } 
+            else if (loc.type === 'cat-terminal') { selectedIcon = blackIcon; targetLayer = layerTerminal; } // Yeni
             else { selectedIcon = blueIcon; targetLayer = layerModern; }
 
             var marker = L.marker([loc.lat, loc.lng], {icon: selectedIcon});
@@ -282,6 +290,7 @@
         layerModern.addTo(map);
         layerIBB.addTo(map);
         layerIskele.addTo(map);
+        layerTerminal.addTo(map);
 
         var overlayMaps = {
             "<span style='color:#e74c3c'>■</span> Tarihi Yerler": layerTarih,
@@ -289,6 +298,7 @@
             "<span style='color:#e67e22'>■</span> Meydanlar": layerMeydan,
             "<span style='color:#f1c40f'>■</span> İBB Sosyal Tesisleri": layerIBB, 
             "<span style='color:#7f8c8d'>■</span> Vapur İskeleleri": layerIskele, 
+            "<span style='color:#2c3e50'>■</span> Otobüs Terminalleri": layerTerminal, // Yeni
             "<span style='color:#9b59b6'>■</span> Müzeler": layerMuze,
             "<span style='color:#3498db'>■</span> Modern & Kültür": layerModern
         };
